factor out style for showQR; fix qr code alignment

--- a/src/gui/static/app/common/common.styl
+++ b/src/gui/static/app/common/common.styl
@@ -217,16 +217,6 @@ label {
     font-size: 24px;
   }
 
-.qr-container {
-  text-align:right;
-  position:relative;
-  padding:30px;
-}
-  .qr-container textarea, .qr-container input {
-    margin-top:20px;
-
-  }
-
 .modal-content {
   width:463px;
 }
